recursion.lessons.recursion.tree.Tree.scala.error
Tree:7: error: ')' expected but ';' found.
		avance(length);
                              ^Tree:10: error: illegal start of statement
	)	
        ^